--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/ceciliaym/liri#readme",
   "dependencies": {
+    "file-system": "^2.2.2",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.85.0",
     "spotify": "^0.3.0",
     "twitter": "^1.7.1"
